[package]
name = "tex"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
aws-config = "1.5.3"
aws-sdk-s3 = "1.40.0"
aws-sdk-textract = "1.33.0"
axum = "0.7.5"
image = "0.24"
imageproc = "0.23"
rusttype = "0.9"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
